# 2D_DFN

./: Clear_gmsh_compile_file.sh  Run_gmsh.sh  Sparse_DFN.m  main1.m  main2.m  main3.m  main_test.m  readme.txt
Cluster/: Cluster.m  Identify_percolating_cluster.m
Domain/: Domain.m
Fractures/: Fractures.m  Fractures_grouped_fixed_orienation.m  Import_fractures.m  Import_fractures_II.m
Geometry/: If_pnt_inside_rectangle.m
Gmsh_script/: CMakeLists.txt  compile_and_run.sh
Gmsh_script/include/MATLAB_DATA_API/: MATLAB_DATA_API.h
Gmsh_script/src/: main.cpp
Intersection/: Intersections.m
Mesh/: Show_DFN_mesh.m
Particle_Tracking/: Adjacent_list.m  IfParticleArrivedNodes.m  IfParticlesArrivedTargetPlane.m  Inject_particles.m  MoveOneStep_GPU.m  WhereParticlesGoNext.m
Plot_DFN/: Plot_DFN.m  Plot_DFN_clusters.m  Plot_DFN_intersections.m  Plot_DFN_percolating_clusters.m
Solute_tranposrt/: Assemble_adja_mat.m  Identify_target_eles.m  Inject_particles.m  Jump_to_next_line.m  One_particle_moves.m  Plot_one_particle_movement.m  Plot_particles_movement.m
Solve/: Inlet_Outlet_flux.m  Plot_flux_vec.m  Plot_pressure_field.m  Solve_DFN_flow.m
inp_fractures/: Fractures.mat  Fractures_1.mat  Fractures_2.mat  Fractures_3.mat
